--- a/package.json
+++ b/package.json
@@ -8,10 +8,11 @@
   },
   "dependencies": {
     "axios": "^1.6.0",
+    "firebase": "^10.5.2",
+    "register-service-worker": "^1.7.2",
     "vue": "^3.3.4",
     "vue-router": "^4.2.5",
-    "vuex": "^4.1.0",
-    "register-service-worker": "^1.7.2"
+    "vuex": "^4.1.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-pwa": "~5.0.0",
